--- a/cursobasicoword.html
+++ b/cursobasicoword.html
@@ -181,7 +181,7 @@
                                 <p class='upercase bold grey-text text-darken-2 no-margin be-medium normal-line-height'>Acerca del curso</p>
                             </header>
                             <section class='large-padding'style="background-color: #3b4453;">
-                                <p style="color: #E9E9E9;" align="justify">Aprenderás las técnicas relacionadas con la gestión de datos vectoriales, tablas, filtros, geoprocesamientos, análisis raster, creación de modelos del terreno y demás herramientas.</p>
+                                <p style="color: #afb2b6;" align="justify">Aprenderás las técnicas relacionadas con la gestión de datos vectoriales, tablas, filtros, geoprocesamientos, análisis raster, creación de modelos del terreno y demás herramientas.</p>
                             </section>
                         </article>
                         <article class='card text-left'>
@@ -339,7 +339,7 @@
                             </header>
                             <section class='large-padding'style='border-color:#3b4453; background-color:#3b4453;'>
                                 <div class='paragraph'>
-                                    <a href="https://doc-0o-28-docs.googleusercontent.com/docs/securesc/9k26n4q0cbl1kueavmgr2s8eae22o931/t7avl9jo13ovd1388v37ff20s4mentdn/1583207250000/03902503612943903357/03902503612943903357/11vxBh5licb_T1T15hcAWwAxQn0wMSuaQ?e=download&authuser=0&nonce=3bdcvlc7njh96&user=03902503612943903357&hash=gons3vbjq03h4udjjpm8rjsq14fe376o" download>Descarga los archivos del curso aquí</a>
+                                    <a href="">Ninguna</a>
                                 </div>
                             </section>
                         </article>
